@@ -26,6 +26,9 @@ version 2.12.1 (??/??/????):
 	* Better support for dark themes. (#12572 Alyssa Rosenzweig and Gary Kramlich)
 	* Fixed IPv6 links by not escaping []'s. (#16391 cyisfor) (PR #270 Daniel Kamil Kozar)
 
+	Finch:
+	* Fix handling of search results (#17238 David Woodhouse)
+
 version 2.12.0 (03/09/2017):
 	libpurple:
 	* Fix an out of bounds memory write in purple_markup_unescape_entity.
